commit aula sem 28

--- a/tela.html
+++ b/tela.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Atividade do Arthur Lovat</h1>
-    <h2>Atividade de Git</h2>
-    <h3>git git git</h3>
-    <h4>Anzol de pesca</h4>
+    <h1> Mause logitec </h1>
+    <h2> <table></table></h2>
 </body>
 </html>
